--- a/src/Components/UniqueSP.css
+++ b/src/Components/UniqueSP.css
@@ -1,4 +1,13 @@
 .unique-background {
     background-image: url('../images/background.svg');
     background-repeat: no-repeat;
+    background-size: cover;
 }
+
+/* @media (min-width: 1024px) and (max-width: 1199px) {
+    .unique-background {
+    max-width: 1199px;
+    width: 100%;
+    max-height: 672px;
+    }
+} */
